Fixed overflow on upload form

--- a/server/app/assets/stylesheets/assignments.scss
+++ b/server/app/assets/stylesheets/assignments.scss
@@ -44,6 +44,12 @@ span#default-filler {
   color: lightgray;
 }
 
+span#form-filename {
+  width: 100%;
+  font-size: 16px;
+  overflow: hidden;
+}
+
 #editor-panel-body {
   padding: 0px;
 }
